fix ui and make normal curl's
