# internal/transport/jsonRPC/externalapi/regression-server.go
@@ -53,8 +53,8 @@ func (srv *serverRegression) MlrRegression(ctx context.Context, observer string,
 	return srv.mlrRegression(ctx, observer, vars, dataPoints)
 }
 
-func (srv *serverRegression) MlrRegressionCSV(ctx context.Context, observer string, vars []string, file multipart.File) (formula string, err error) {
-	return srv.mlrRegressionCSV(ctx, observer, vars, file)
+func (srv *serverRegression) MlrRegressionCSV(ctx context.Context, file multipart.File) (formula string, err error) {
+	return srv.mlrRegressionCSV(ctx, file)
 }
 
 func (srv *serverRegression) RidgeRegression(ctx context.Context, xData [][]float64, yData [][]float64, alpha float64, tol float64, normalize bool) (formula string, err error) {
